test/typeerrors/Examples/MafShow.hs
maf :: ()
maf =
   let f = undefined
       i = show
   in f
